--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,11 +1,15 @@
 %head
   %title
     = set_header_title
-  %meta{:content => "application/xhtml+xml; charset=UTF-8", "http-equiv" => "content-type"}/
-  %meta{:content => "La Rioja RB", :name => "author"}/
-  %meta{:content => "Time flies", :name => "description"}/
-  %meta{:content => "index, follow, noarchive", :name => "robots"}/
-  %meta{:content => "noarchive", :name => "googlebot"}/
-  = stylesheet_link_tag 'reset', 'coolblue', 'enhancements', :media => "screen"
+  %meta{:charset => "utf-8"}/
+  = stylesheet_link_tag 'main', :media => "screen"
+  /[if IE]
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  /[if lte IE 7]
+    <link rel="stylesheet" type="text/css" media="all" href="/stylesheets/ie.css"/>
+    <script src="/javascripts/IE8.js" type="text/javascript"></script>
+  /[if lt IE 7]
+    <link rel="stylesheet" type="text/css" media="all" href="/stylesheets/ie6.css"/>
+
   = javascript_include_tag :defaults
   = csrf_meta_tag
