--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,14 +1,12 @@
 !!!
-%html{:lang => I18n.locale, "xml:lang" => I18n.locale, :xmlns => "http://www.w3.org/1999/xhtml"}
+%html{:lang => I18n.locale}
   = render :partial => "layouts/header"
+
   %body
-    #header-wrap
-      #header
-        =render :partial => "shared/menu"
-    #content-wrap.clear
-      #content
-        #main
-          = yield
-        #sidebar
-          = yield(:sidebar) || render(:partial => "shared/sidebar")
+    =render :partial => "shared/menu"
+    = render_flash_messages
+    %section#content.body
+      = yield
+    %section#extras.body
+      = yield(:sidebar) || render(:partial => "shared/sidebar")
     = render :partial => "layouts/footer"
