--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,25 +1,22 @@
-%a{:name => "top"}
-%h1#logo-text
-  =link_to("Persistence of Time", root_path)
-%p#slogan Got the time tick, tick, ticking in my head
-#nav
-  %ul
-    %li#current
-      =link_to("Registrar", labors_path)
-    %li
-      =link_to("Semana", week_labors_path)
-    %li
-      =link_to("Mes", month_labors_path)
-    %li
-      =link_to("Actividad", activity_jobs_path)
-    %li
-      =link_to("Persona", activity_users_path)
-    %li
-      =link_to("Acerca de", :controller => 'home', :action => 'about')
-%p#rss
-  ="Hola, #{current_user.name}" if logged_in?
-%form#quick-search{:action => "index.html", :method => "get"}
-  %fieldset.search
-    %label{:for => "qsearch"} Search:
-    %input#qsearch.tbox{:name => "qsearch", :title => "Start typing and hit ENTER", :type => "text", :value => "Search..."}/
-    %button.btn{:title => "Submit Search"} Search
+%header#banner.body
+  %h1
+    %a{:href => "#"}
+      =link_to("Persistence of Time", root_path)
+  %strong
+    Got the time tick, tick, ticking in my head
+  %nav
+    %ul
+      %li{:class => (current_page?(labors_path)) ? 'active' : nil}
+        =link_to(t('public.menu.task'), labors_path)
+      %li{:class => (current_page?(week_labors_path)) ? 'active' : nil}
+        =link_to(t('public.menu.week'), week_labors_path)
+      %li{:class => (current_page?(month_labors_path)) ? 'active' : nil}
+        =link_to(t('public.menu.month'), month_labors_path)
+      %li{:class => (current_page?(activity_jobs_url)) ? 'active' : nil}
+        =link_to(t('public.menu.activity'), activity_jobs_path)
+      %li{:class => (current_page?(activity_users_url)) ? 'active' : nil}
+        =link_to(t('public.menu.person'), activity_users_path)
+      %li{:class => (current_page?(:controller => 'home', :action => 'about')) ? 'active' : nil}
+        =link_to(t('public.menu.about'), :controller => 'home', :action => 'about')
+      %li
+        ="#{t('public.menu.hello')}, #{current_user.name}" if logged_in?
