Added factory girl with rails support, cucumber and some fixes

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
 
   %body
     =render :partial => "shared/menu"
-    = render_flash_messages
+    =raw render_flash_messages
     %section#content.body
       = yield
     %section#extras.body
